--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
     "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile && yarn run lint",
-    "test": "node ./out/test/runTest.js"
+    "pretest": "yarn run compile && yarn run lint"
   },
   "devDependencies": {
     "@types/vscode": "^1.47.0",
