Edit publisher name

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-react-fc-template",
   "displayName": "TypeScript React FC Templater",
   "description": "Generates a TypeScript React functional component template when creating a new .tsx file",
-  "publisher": "Joel Bergman",
+  "publisher": "joelbergman",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.47.0"
